--- a/recipes/projectify.json
+++ b/recipes/projectify.json
@@ -1,5 +1,5 @@
 {
 	"name": "projectify",
 	"repository": "https://github.com/NicolasPetton/Projectify.git",
-	"pluginPath": "plugins/projectify"
+	"pluginPath": "plugins/nico/projectify"
 }
